--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,136 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+main {
+    height: 100vh;
+}
+
+#index {
+    display: flex;
+    flex-direction: column;
+    font-family: 'Lato', sans-serif;
+    gap: 1rem;
+}
+
+.currentWeather {
+    padding: 2rem 3rem 0 3rem;
+    width: 100%;
+    height: 16rem;
+}
+
+.date {
+    width: 100%;
+    height: 5rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 4rem 1rem;
+}
+
+h1 {
+    font-size: 3.5rem;
+    font-weight: 500;
+    align-items: center;
+}
+
+h2 {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    font-weight: 400;
+    font-size: 1.2rem;
+}
+
+h3 {
+    font-weight: 300;
+    font-size: 0.8rem;
+}
+
+.description {
+    padding-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 0.8rem;
+}
+
+#temp {
+    justify-content: center;
+    display: flex;
+    font-size: 5rem;
+    padding-bottom: 0.3rem;
+    font-weight: 700;
+}
+
+.nextHours {
+    display: flex;
+    list-style: none;
+    gap: 1rem;
+    justify-content: center;
+    font-size: 0.8rem;
+}
+
+.nextHours li {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    border-radius: 10px;
+    width: 3.5rem;
+    height: 4.5rem;
+    justify-content: center;
+    align-items: center;
+    letter-spacing: 0.1rem;
+}
+
+h4 {
+    padding: 1rem 0 1rem 1rem;
+    font-weight: 500;
+}
+
+.nextDays {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 0 1rem;
+    align-items: center;
+}
+
+.nextDays li {
+    border: 1px solid black;
+    border-radius: 10px;
+    height: 3.5rem;
+    width: 90%;
+    display: grid;
+    grid-template-columns: 32% 28% 20% 20%;
+    grid-template-rows: 1fr;
+    padding-left: 1.5rem;
+    font-size: 1rem;
+    align-items: center;
+}
+
+.nextDays p:last-child {
+    justify-self: right;
+    padding-right: 1rem;
+}
+
+.nextDays li img {
+    justify-self: center;
+}
+
+.nextDays li p:nth-child(3) {
+    justify-self: right;
+}
+
+img {
+    width: 40px;
+    height: 40px;
+}
+
+button {
+    background-color: transparent;
+    border: none;
 }
