--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,20 +7,40 @@
 }
 
 main {
-    height: 100vh;
+    background-color: transparent;
+}
+
+.background {
+    background-color:#99c3ff;
+    background-image:
+    radial-gradient(at 40% 89%, hsla(177,93%,66%,1) 0px, transparent 50%),
+    radial-gradient(at 56% 74%, hsla(255,73%,62%,1) 0px, transparent 50%),
+    radial-gradient(at 93% 22%, hsla(104,63%,75%,1) 0px, transparent 50%),
+    radial-gradient(at 3% 1%, hsla(179,95%,67%,1) 0px, transparent 50%),
+    radial-gradient(at 7% 41%, hsla(118,62%,67%,1) 0px, transparent 50%),
+    radial-gradient(at 89% 42%, hsla(181,67%,78%,1) 0px, transparent 50%),
+    radial-gradient(at 41% 9%, hsla(304,73%,62%,1) 0px, transparent 50%);
+    background-blend-mode: hard-light;
+    filter: opacity(0.3);
+
+    position: absolute;
+    z-index: -1;
+    height: 90vh;
+    width: 100vw;
 }
 
 #index {
     display: flex;
     flex-direction: column;
     font-family: 'Lato', sans-serif;
-    gap: 1rem;
+    color: #5c557c;
 }
 
 .currentWeather {
     padding: 2rem 3rem 0 3rem;
     width: 100%;
     height: 16rem;
+    margin-bottom: 1rem;
 }
 
 .date {
@@ -28,34 +48,38 @@ main {
     height: 5rem;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 4rem 1rem;
+}
+
+.date-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
 }
 
 h1 {
     font-size: 3.5rem;
     font-weight: 500;
-    align-items: center;
 }
 
 h2 {
     display: flex;
     justify-content: flex-end;
-    align-items: center;
     font-weight: 400;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
 }
 
 h3 {
-    font-weight: 300;
+    font-weight: 400;
     font-size: 0.8rem;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .description {
-    padding-top: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 0.8rem;
 }
 
 #temp {
@@ -66,18 +90,23 @@ h3 {
     font-weight: 700;
 }
 
+.container-next-hours {
+    border-radius: 10px;
+    background-color: white;
+}
+
 .nextHours {
     display: flex;
     list-style: none;
     gap: 1rem;
     justify-content: center;
     font-size: 0.8rem;
+    margin-bottom: 2rem;
 }
 
 .nextHours li {
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
     border-radius: 10px;
     width: 3.5rem;
     height: 4.5rem;
@@ -85,24 +114,29 @@ h3 {
     align-items: center;
     letter-spacing: 0.1rem;
     gap: 0.1rem;
+    backdrop-filter: blur(40px);
+}
+
+.last-section {
+    border-radius: 30px 30px 0 0;
+    background-color: white;
+    margin-bottom: 0.5rem;
 }
 
 h4 {
-    padding: 1rem 0 1rem 1rem;
-    font-weight: 500;
+    padding: 1rem 0 1rem 2.3rem;
+    font-weight: 600;
 }
 
 .nextDays {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    padding: 0 1rem;
+    gap: 0.5rem;
+    padding-left: 0.2rem;
     align-items: center;
 }
 
 .nextDays li {
-    border: 1px solid black;
-    border-radius: 10px;
     height: 3.5rem;
     width: 90%;
     display: grid;
@@ -111,6 +145,11 @@ h4 {
     padding-left: 1.5rem;
     font-size: 1rem;
     align-items: center;
+}
+
+.nextDays li:nth-child(2) {
+    border-top: 1px solid #5c557c;
+    border-bottom: 1px solid #5c557c;
 }
 
 .nextDays p:last-child {
@@ -131,7 +170,27 @@ img {
     height: 40px;
 }
 
+.hidden-button {
+    overflow-y: hidden;
+    height: 3rem;
+}
+
+.container-button {
+    background-color: #5c557c;
+    width: 30%;
+    height: 6rem;
+    border-radius: 100%;
+    position: relative;
+    left: 35%;
+    bottom: -10px;
+    opacity: 0.8;
+}
+
 button {
     background-color: transparent;
     border: none;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
