--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,6 +8,7 @@
 
 main {
     background-color: transparent;
+    --mainColor :#5c557c;
 }
 
 .background {
@@ -25,7 +26,7 @@ main {
 
     position: absolute;
     z-index: -1;
-    height: 90vh;
+    height: 100vh;
     width: 100vw;
 }
 
@@ -33,7 +34,7 @@ main {
     display: flex;
     flex-direction: column;
     font-family: 'Lato', sans-serif;
-    color: #5c557c;
+    color: var(--mainColor);
 }
 
 .currentWeather {
@@ -41,6 +42,10 @@ main {
     width: 100%;
     height: 16rem;
     margin-bottom: 1rem;
+    background: url(../assets/background/sun.png);
+    background-repeat: no-repeat;
+    background-position: 20% 90%;
+    background-size: 9rem;
 }
 
 .date {
@@ -58,8 +63,9 @@ main {
 }
 
 h1 {
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     font-weight: 500;
+    align-self: center;
 }
 
 h2 {
@@ -88,11 +94,12 @@ h3 {
     font-size: 5rem;
     padding-bottom: 0.3rem;
     font-weight: 700;
+    align-self: flex-end;
 }
 
 .container-next-hours {
     border-radius: 10px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.466);
 }
 
 .nextHours {
@@ -115,12 +122,13 @@ h3 {
     letter-spacing: 0.1rem;
     gap: 0.1rem;
     backdrop-filter: blur(40px);
+    box-shadow: 2px 0 4px -4px var(--mainColor), -2px 0 4px -4px var(--mainColor);
 }
 
 .last-section {
     border-radius: 30px 30px 0 0;
-    background-color: white;
-    margin-bottom: 0.5rem;
+    background-color: rgba(255, 255, 255, 0.767);
+    padding-bottom: 0.5rem;
 }
 
 h4 {
@@ -148,8 +156,8 @@ h4 {
 }
 
 .nextDays li:nth-child(2) {
-    border-top: 1px solid #5c557c;
-    border-bottom: 1px solid #5c557c;
+    border-top: 1px solid var(--mainColor);
+    border-bottom: 1px solid var(--mainColor);
 }
 
 .nextDays p:last-child {
@@ -173,10 +181,11 @@ img {
 .hidden-button {
     overflow-y: hidden;
     height: 3rem;
+    background-color: rgba(255, 255, 255, 0.767);
 }
 
 .container-button {
-    background-color: #5c557c;
+    background-color: var(--mainColor);
     width: 30%;
     height: 6rem;
     border-radius: 100%;
