--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,14 +13,6 @@ main {
 
 .background {
     background-color:#99c3ff;
-    background-image:
-    radial-gradient(at 40% 89%, hsla(177,93%,66%,1) 0px, transparent 50%),
-    radial-gradient(at 56% 74%, hsla(255,73%,62%,1) 0px, transparent 50%),
-    radial-gradient(at 93% 22%, hsla(104,63%,75%,1) 0px, transparent 50%),
-    radial-gradient(at 3% 1%, hsla(179,95%,67%,1) 0px, transparent 50%),
-    radial-gradient(at 7% 41%, hsla(118,62%,67%,1) 0px, transparent 50%),
-    radial-gradient(at 89% 42%, hsla(181,67%,78%,1) 0px, transparent 50%),
-    radial-gradient(at 41% 9%, hsla(304,73%,62%,1) 0px, transparent 50%);
     background-blend-mode: hard-light;
     filter: opacity(0.3);
 
@@ -97,6 +89,10 @@ h3 {
     align-self: flex-end;
 }
 
+.hourParagraph {
+    justify-content: right;
+}
+
 .container-next-hours {
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.466);
@@ -127,7 +123,7 @@ h3 {
 
 .last-section {
     border-radius: 30px 30px 0 0;
-    background-color: rgba(255, 255, 255, 0.767);
+    background-color: rgba(255, 255, 255, 0.644);
     padding-bottom: 0.5rem;
 }
 
@@ -181,7 +177,7 @@ img {
 .hidden-button {
     overflow-y: hidden;
     height: 3rem;
-    background-color: rgba(255, 255, 255, 0.767);
+    background-color: rgba(255, 255, 255, 0.644);
 }
 
 .container-button {
