--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,12 +23,15 @@ main {
 }
 
 /* CURRENT WEATHER */
+.container-currentInfo {
+    transition: transform 3s ease-in;
+}
+
 #index {
     display: flex;
     flex-direction: column;
     font-family: 'Lato', sans-serif;
     color: var(--mainColor);
-    height: 100vh;
 }
 
 .currentWeather {
@@ -98,6 +101,7 @@ h3 {
 }
 
 .nextHours {
+    height: 72px;
     display: flex;
     list-style: none;
     gap: 1rem;
@@ -209,23 +213,28 @@ div.moreInfo {
     opacity: 0.8;
     color: #dfdce7;
     font-family: 'Lato', sans-serif;
-    /*display: none;*/
+    display: none;
     width: 100%;
-    display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .moreInfo article {
-    background-color: #ffffff38;
+    background-color: #ffffff21;
 }
 
+.moreInfo article h2 {
+    font-size: 1rem;
+    justify-content: left;
+}
+
+/* AMANECER | ANOCHECER */
 .sunset-sunrise {
     display: grid;
     grid-template-columns: 30% 20% 30%;
     grid-template-rows: repeat(2, 1fr);
-    margin-top: 0.8rem;
-    margin-bottom: 1rem;
+    margin-top: 0.6rem;
+    margin-bottom: 0.6rem;
     width: 90%;
     justify-content: center;  
     border-radius: 10px;
@@ -249,16 +258,11 @@ div.moreInfo {
     padding-right: 0.3rem;
 }
 
-.moreInfo article h2 {
-    font-size: 1rem;
-    justify-content: left;
-}
-
 .container-tempAndUv, .container-uvHum {
     display: flex;
     width: 90%;
     justify-content: space-between;
-    margin-bottom: 0.8rem;
+    margin-bottom: 0.6rem;
 }
 
 .container-tempAndUv article, .container-uvHum article {
@@ -266,6 +270,7 @@ div.moreInfo {
     border-radius: 10px;
 }
 
+/* TEMPERATURA MAX Y MIN */
 .temperatures {
     display: flex;
     width: 30%;
@@ -279,7 +284,7 @@ div.moreInfo {
     flex-direction: column;
     gap: 0.8rem;
 }
-
+ /* UV */
 .uv {
     display: flex;
     padding-right: 0;
@@ -303,6 +308,7 @@ div.moreInfo {
     align-items: flex-end;
 }
 
+/* HUMEDAD*/
 .humidity {
     display: flex;
     flex-direction: column;
@@ -320,6 +326,7 @@ div.moreInfo {
     align-items: center;
 }
 
+/* VIENTO */
 .container-titleWind {
     display: flex;
 }
