Fixed moreInfo scroll height

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -217,6 +217,7 @@ div.moreInfo {
     width: 100%;
     flex-direction: column;
     align-items: center;
+    height: 56.3vh;
 }
 
 .moreInfo article {
